Bug 14895: Removes the ability to edit already added item's info from serials-edit.pl page
Test plan:

1. In serials create a new subscription with the option "create an item record when receiving this serial" selected. You can choose the other properties.
2. Find the newly created serial subscription by using the top bar's search.
3. Click from the 'Actions' drop-down menu 'Serial receive'.
4. Change the status to 'Arrived'. Add something to the barcode field. Save.
4.1 (Optional step) Open a new tab in your browser and go see that there is in the catalogue the item you just added and it has a barcode.
5. Now you should have arrived to the page serials-collection.pl. Here, select the very same serial item you just edited and click 'Edit serials'
6. Now click just save button without doing any changes.
7. Go to find that item from the biblio record. Notice its barcode is missing now.
8. Apply the patch
9. Put there some barcode to the item manually.
9. Go back to the serials-collection.pl page and select the item and click
   'Edit serials'.
10. Click save on the edit-serials.pl page without changing any information.
11. Go and check that the item has still its barcode.
12. Find out if this patch's changes to edit-serials.pl has caused some
    problems in other parts of the system.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-edit.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-edit.tt
@@ -243,8 +243,11 @@ $(document).ready(function() {
     </tr>
   [% UNLESS ( serialslis.subscriptionexpired ) %]
   [% IF ( serialslis.serialsadditems ) %]
-          <tr>
-          <td colspan="5">
+    <tr>
+    [% FOREACH item IN serialslis.items %]
+    [% IF ( item.itemid.substr(0,1) == "N" ) %]
+
+    <td colspan="5">
       <a id="label[% serialslis.subscriptionid %][% serialslis.serialid %]" style="color: grey; font-size: 80%; cursor: pointer;"  onclick="unHideItems('items[% serialslis.subscriptionid %][% serialslis.serialid %]','label[% serialslis.subscriptionid %][% serialslis.serialid %]',  '[% serialslis.serialid %]');setStatus([% serialslis.serialid %]);">
              Click to add item</a>
         <fieldset class="rows" style="display:none;" id="items[% serialslis.subscriptionid %][% serialslis.serialid %]">
@@ -252,7 +255,7 @@ $(document).ready(function() {
                 Item</a>
         </legend>
           <div class="cataloguing_additem_itemlist">
-        [% FOREACH item IN serialslis.items %]
+
         <div id="item[% item.serialid %][% item.countitems %]" class="items">
         <ol>[% FOREACH iteminformatio IN item.iteminformation %]<li>
                <div class="subfield_line" style="[% iteminformatio.hidden %]" id="subfield[% item.serialid %][% item.countitems %][% iteminformatio.subfield %][% iteminformatio.random %]">
@@ -283,10 +286,12 @@ $(document).ready(function() {
         <input type="hidden" name="bibnum" value="[% item.biblionumber %]" />
         <input type="hidden" name="itemid" value="[% item.itemid %]" />
         <input type="hidden" name="field_value" value="[% item.itemnumber %]" />
-        [% END %] <!-- /items -->
         </div>
         </fieldset>
     </td>
+
+  [% END %]
+  [% END %]
     </tr>
   [% END %]
   [% END %]
