KD#377 - CPU / Ceepos integration. Integrate cash registers (POS) into Koha.
This commit integrates Ceepos cash registers into Koha. The basic idea is to
construct a payment from Koha accountlines and send it to the cash register
where it will be either accepted or cancelled. CPU will notify Koha the payment
status. After this, Koha modifies the accountlines accordingly and creates a
new accountline of type "Pay".

Changes in views for staff client are kept minimal. This patch does not
include OPAC payments and has nothing to do with OPAC at all.

Key features are:
  - Create Koha::Object for transactions called "PaymentTransactions".
  - Stop using C4::Accounts default functions because they suck. Instead, create
    a new subroutine that combines all four C4::Accounts way of payment. The new
    subroutine "completes" a transaction, i.e. after payment is successful, it
    makes an old-style Koha-payment so that Koha is in sync with the cash register
    system. Call by $transaction->CompletePayment();
  - members/paycollect.pl creates a new transaction and sends it via Ajax.
    (C4::OPLIB::CPUIntegration::SendPayment() sends it)
  - REST endpoint for getting a transaction:
      - /api/v1/pos/cpu/{invoicenumber} GET
  - REST endpoint for receiving reports from CPU:
      - /api/v1/pos/cpu/{invoicenumber}/report POST
  - System preferences
      - cpuitemnumbers: YAML config that maps Koha accountlines itemtypes to actual
                        cash register codes.
      - POSIntegration: turn the whole integration on/off.
  - Does not use the integration for branches that have not mapped Koha-items to
    CPU items in "cpuitemnumbers"
Configurations to get started:
  - koha-conf.xml introduces new settings for CPU (pos->CPU):
      - source: Source key provided by CPU
      - secretKey: Secret key to construct a SHA-256 hash from input
      - url: address to CPU
      - modle: defines the mode for response type (1: synchronous, 2: asynchronous)
      - notific

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt
@@ -1,6 +1,14 @@
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Koha &rsaquo; Patrons &rsaquo; Account for [% INCLUDE 'patron-title.inc' %]</title>
 [% INCLUDE 'doc-head-close.inc' %]
+<style type="text/css">
+   td.transaction-selected {
+	  background:#FFBC8F !important;
+   }
+   tr:hover td.transaction-selected  {
+	  background:#F0A16C !important;
+   }
+</style>
 </head>
 <body id="pat_borraccount" class="pat">
 [% INCLUDE 'header.inc' %]
@@ -29,6 +37,7 @@
 <table>
   <tr>
   	<th>Date</th>
+	<th>Transaction number</th>
     <th>Description of charges</th>
     <th>Note</th>
     <th>Amount</th>
@@ -42,8 +51,12 @@
 	<!-- FIXME: Shouldn't hardcode dollar signs, since Euro or Pound might be needed -->
   [% FOREACH account IN accounts %]
 
-   [% IF ( loop.odd ) %]<tr>[% ELSE %]<tr class="highlight">[% END %]
+   [% IF ( loop.odd ) %]<tr [% IF account.transactionnumber %]class="transaction"[% END %]>[% ELSE %]<tr class="highlight [% IF account.transactionnumber %]transaction[% END %]">[% END %]
+		 [% FOREACH relline IN relatedaccounts.${account.accountlines_id} %]
+			<input type="hidden" name="parentTransaction" value="[% relline %]" />
+		 [% END %]
       <td>[% account.date %]</td>
+	  <td class="transactionnumber">[% IF account.transactionnumber %][% account.transactionnumber %][% ELSE %]-[% END %]</td>
       <td>
         [% SWITCH account.accounttype %]
           [% CASE 'Pay' %]Payment, thanks
@@ -92,7 +105,7 @@
   [% END %]
 <tfoot>
   <tr>
-    <td colspan="4">Total due</td>
+    <td colspan="5">Total due</td>
     [% IF ( totalcredit ) %]
       [% IF ( reverse_col ) %]
         <td colspan="3" class="credit">
@@ -114,7 +127,37 @@
 
 </div>
 </div>
+<script type="text/javascript">
+   $("tr").on("click", function(e) {
+	  $("td").each(function() {
+		 if ($(this).hasClass("transaction-selected")) {
+			$(this).removeClass("transaction-selected");
+		 }
+	  });
+	  if ($(this).hasClass("transaction")) {
+		 $(this).children("td").addClass("transaction-selected");
+		 $(this).children("td").each(function() {
+			if ($(this).hasClass("transactionnumber")) {
+			   var transactionnumber = $(this).html();
 
+			   $("input[name*='parentTransaction']").each(function() {
+				  if ($(this).val() == transactionnumber) {
+					 $(this).parent().children("td").addClass("transaction-selected");
+				  }
+			   });
+			}
+		 });
+	  }
+	  e.stopPropagation();
+   })
+   $(document).click(function(e) {
+	  $("td").each(function() {
+		 if ($(this).hasClass("transaction-selected")) {
+			$(this).removeClass("transaction-selected");
+		 }
+	  });
+   });
+</script>
 <div class="yui-b">
 [% INCLUDE 'circ-menu.inc' %]
 </div>
