Bug 10744 - ExpireReservesMaxPickUpDelay works with hold(s) over report
Hold(s) over -report at circ/waitingreserves.pl doesn't work because
ExpireReservesMaxPickup removes reserves from the koha.reserves-table to the
koha.old_reserves-table.

This patch adds a new column koha.reserves.pickupexpired telling when/if the
reserve has got it's pickup duration expired.

This date is used to pull old reserves to the waitingreserves-view.

syspref 'PickupExpiredHoldsOverReportDuration' controls how many days after
expiration old reserves are displayed on the report, and the values respect
Koha::Calendar holidays

Web tests included.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/waitingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/waitingreserves.tt
@@ -90,7 +90,7 @@
                 <tr>
                     <td class="waitingdate"><span title="[% reserveloo.waitingdate %]">[% reserveloo.waitingdate | $KohaDates %]</span></td>
                     <td class="lastpickupdate">[% reserveloo.lastpickupdate %]</td>
-                    <td class="title">[% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
+                    <td class="resobjects">[% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
                         [% reserveloo.title |html %] [% reserveloo.subtitle |html %]
                         </a>
                             &nbsp; (<b>[% reserveloo.itemtype %]</b>)
@@ -152,7 +152,7 @@
                     <tr>
                         <td class="waitingdate"><p><span title="[% overloo.waitingdate %]">[% overloo.waitingdate | $KohaDates %]</span></p></td>
                         <td class="lastpickupdate">[% overloo.lastpickupdate %]</td>
-                        <td class="title">[% INCLUDE 'biblio-default-view.inc' biblionumber = overloo.biblionumber %][% overloo.title |html %] [% overloo.subtitle |html %]
+                        <td class="resobjects">[% INCLUDE 'biblio-default-view.inc' biblionumber = overloo.biblionumber %][% overloo.title |html %] [% overloo.subtitle |html %]
                         </a>
                             [% UNLESS ( item_level_itypes ) %][% IF ( overloo.itemtype ) %]&nbsp; (<b>[% overloo.itemtype %]</b>)[% END %][% END %]
                         <br />Barcode: [% overloo.barcode %]
