Bug 15172 - Serial enumchron/sequence not visible when returning/checking in Items
Displays the items.enumchron-column in returns.pl when checking in Items.

Pending web testing

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -531,7 +531,11 @@ $(document).ready(function () {
                 [% END %]
             </td>
             <td><a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=[% riloo.itembiblionumber %]">
-                    [% riloo.itemtitle |html %]</a></td>
+                    [% riloo.itemtitle |html %]
+                </a>
+                <br/>
+                <span class="item_enumeration" style="white-space: nowrap;">[% riloo.enumchron %]</span>
+            </td>
 			<td>[% riloo.itemauthor %]</td>
             <td><a href="/cgi-bin/koha/catalogue/moredetail.pl?biblionumber=[% riloo.itembiblionumber %]&amp;itemnumber=[% riloo.itemnumber %]#item[% riloo.itemnumber %]">[% riloo.barcode %]</a></td>
             <td>[% riloo.homebranch %]</td>
