Bug 9525 - group floating rules, floating rule tester :)
Implemented a tester to floating-matrix.pl to more easily test the changes in
the floating rules matrix "FloMax".

--- a/koha-tmpl/intranet-tmpl/prog/en/css/admin/floating-matrix.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/admin/floating-matrix.css
@@ -1,6 +1,14 @@
 .disabled-transfer {
     background-color: #FF8888;
 }
+
+#testResulDisplay { width: 20px;
+                    height: 22px;
+                    background-color: #B9D8D9;
+                    vertical-align: middle;
+                    display: inline-block;
+}
+
 .branchRule select { width: 100%; }
 .branchRule select {padding: 0px; margin: 5px 0px;}
 
